--- a/courses.html
+++ b/courses.html
@@ -24,7 +24,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > Calculator</h1>
+			<h1 class="contentTitle">Portfolio > Courses</h1>
 			<ul class="portfolio_display">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -43,25 +43,27 @@
 
 
 
-			<img class="selectedProject" src="http://i.imgur.com/nWuRD8a.jpg">
+			<img class="selectedProject" src="img/courses.jpg">
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-While I had often played around with JavaScript as I learned, I had never created any useful applications of it. This project helped challenge my knowledge of JavaScript and gave me a benchmark for where I stood with my understanding of creating actual applications in JavaScript.
+				While Treehouse isn't my only source of knowledge, it certainly is the one that helped me start and grow confident in my path of becoming a web developer. I am proud of what I have accomplished there. This project is constantly updated, showing what I have learned since I began this journey.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
 				<li class="listHTML">HTML</li>
 				<li class="listCSS">CSS</li>
 				<li class="listJavaScript">JavaScript</li>
+				<li class="listPHP">PHP</li>
+				<li class="listMySQL">MySQL</li>
 			</ul>
 
 			<ul class="projectExternalLinks">
 				<li>
-					<a class="liveSiteButton" target="_blank" href="http://calculator.donhansen.me">Live Site</a>
+					<a class="liveSiteButton" target="_blank" href="http://courses.donhansen.me">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/calculator">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/courses">GitHub</a>
 				</li>
 			</ul>		
 
