--- a/css3dcube.html
+++ b/css3dcube.html
@@ -24,7 +24,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > Calculator</h1>
+			<h1 class="contentTitle">Portfolio > Midpulse</h1>
 			<ul class="portfolio_display">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -39,29 +39,29 @@
 						<a href=""><img src="http://i.imgur.com/nWuRD8a.jpg"></a>
 				</li>
 			</ul>
-			<h2 class="projectTitle">Calculator</h2>
+			<h2 class="projectTitle">Stream Energy</h2>
 
 
 
-			<img class="selectedProject" src="http://i.imgur.com/nWuRD8a.jpg">
+			<img class="selectedProject" src="img/css3dcube.png">
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-While I had often played around with JavaScript as I learned, I had never created any useful applications of it. This project helped challenge my knowledge of JavaScript and gave me a benchmark for where I stood with my understanding of creating actual applications in JavaScript.
+				I am an entrepreneur at heart, and this 7-year-long business venture is my first attempt at becoming one. While I scraped together a website for my web hosting company, my main accomplishment of this project was learning, from many failures, how to create and maintain important client relationships that helped my business grow.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
 				<li class="listHTML">HTML</li>
 				<li class="listCSS">CSS</li>
-				<li class="listJavaScript">JavaScript</li>
+        <li class="listJavaScript">JavaScript</li>
 			</ul>
 
 			<ul class="projectExternalLinks">
 				<li>
-					<a class="liveSiteButton" target="_blank" href="http://calculator.donhansen.me">Live Site</a>
+					<a class="liveSiteButton" target="_blank" href="">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/calculator">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/css3dcube">GitHub</a>
 				</li>
 			</ul>		
 
