--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > CSS 3D Cube</h1>
+			<h1 class="contentTitle">Portfolio > Portfolio</h1>
 			<ul class="portfolio_display">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -50,29 +50,31 @@
 						<a href=""><img src="http://i.imgur.com/nWuRD8a.jpg"></a>
 				</li>
 			</ul>
-			<h2 class="projectTitle">CSS 3D Cube</h2>
+			<h2 class="projectTitle">Portfolio</h2>
 
 
 
-			<img class="selectedProject" src="img/css3dcube.png">
+			<img class="selectedProject" src="img/portfolio.jpg">
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-				I am an entrepreneur at heart, and this 7-year-long business venture is my first attempt at becoming one. While I scraped together a website for my web hosting company, my main accomplishment of this project was learning, from many failures, how to create and maintain important client relationships that helped my business grow.
+				I have really taken to minimalist design and this constantly updated showcase of my work speaks to that. I've been really digging into what makes minimalist design work so well, in my learning these past few months. While my portfolio is a work-in-progress, I feel that it can show in what direction my design is growing.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
 				<li class="listHTML">HTML</li>
 				<li class="listCSS">CSS</li>
-        <li class="listJavaScript">JavaScript</li>
+				<li class="listJavaScript">JavaScript</li>
+				<li class="listPHP">PHP</li>
+				<li class="listMySQL">MySQL</li>
 			</ul>
 
 			<ul class="projectExternalLinks">
 				<li>
-					<a class="liveSiteButton" target="_blank" href="http://csscube.donhansen.me">Live Site</a>
+					<a class="liveSiteButton" href="http://donhansen.me">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/css3dcube">GitHub</a>
+					<a class="githubButton" href="">GitHub</a>
 				</li>
 			</ul>		
 
