update to projects

--- a/css3dcube.html
+++ b/css3dcube.html
@@ -58,7 +58,7 @@
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-				I am an entrepreneur at heart, and this 7-year-long business venture is my first attempt at becoming one. While I scraped together a website for my web hosting company, my main accomplishment of this project was learning, from many failures, how to create and maintain important client relationships that helped my business grow.
+				This was the 2nd bite-sized code-along project I built on live stream. This was an introduction to CSS animations. It's a 3D cube that rotates in any direction when arrow keys are pressed.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
