--- a/streamenergy.html
+++ b/streamenergy.html
@@ -35,7 +35,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > Midpulse</h1>
+			<h1 class="contentTitle">Portfolio > Stream Energy</h1>
 			<ul class="portfolio_display">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -58,7 +58,7 @@
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-				I am an entrepreneur at heart, and this 7-year-long business venture is my first attempt at becoming one. While I scraped together a website for my web hosting company, my main accomplishment of this project was learning, from many failures, how to create and maintain important client relationships that helped my business grow.
+				This is the first bite-sized code-along project I built on live stream. This is a simple script that uses JavaScript to grab JSON data, through Twitch's API, of current viewers in the channel.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
