--- a/about.html
+++ b/about.html
@@ -39,28 +39,16 @@
 		</div>
 		
 		<div class="twitchInfo clearfix">
-			<img src="http://s.jtvnw.net/jtv_user_pictures/hosted_images/Twitch_LogoURL_white.png">
 			
-			<p>
-				Every week, I build bite-sized web development projects on stream with my viewers. Check out some of the projects we've have built so far.
-			</p>
-			
-			<ul class="twitchProjects">
-				<li><img src="img/css3dcube.png"></li>
-				<li><img src="img/streamenergy.png"></li>
-				<li><img src="img/twitchstats.png"></li>
-			</ul>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu bibendum lorem, sit amet luctus lorem. Vestibulum quis justo at mi blandit rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent auctor tortor quis ultrices volutpat. Maecenas vitae justo commodo, pretium erat eu, bibendum risus.</p>
+			<iframe class="embededLiveStream" src="https://player.twitch.tv/?channel=donthedeveloper" frameborder="0" scrolling="no"></iframe><a href="https://www.twitch.tv/donthedeveloper?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;"></a>
 		</div>
+		
 		
 		<div class="coursesInfo clearfix">
 		<img class="testcourses" src="img/courses.jpg">
-			<p>I am self-taught. Everything I have learned comes from my love for coding and design. I have learned a lot through Treehouse courses and other articles, but I have so much more to learn. That’s what excites me the most.</p>
+			<p>I am self-taught. Everything I have learned comes from my love for coding and design. I started with the LAMP stack, because it was simple to learn and build basic websites. To this day, I still love it, because of how complex, robust, and powerful I have found it to be.</p>
 		</div>
-		
-<!-- 		<img src="img/completedcourses.jpg"> -->
-		
-<!-- 	  <p>Why am I looking for a full-time position in front-end development? While I’ve always loved the “aha” moments that PHP has given me, I also have a fascination for design. Front-end development lets me grow and become better at design, while also giving me those “aha” moments through object-oriented(yes I know it’s not really object-oriented) programming such as JavaScript.</p> -->
-<!--     <p>Information is beautiful and statistics is a powerful way to show that. Let me show you what my actions say about me.</p> -->
   </div>
 	
 	<footer>
