--- a/midpulse.html
+++ b/midpulse.html
@@ -47,7 +47,7 @@
 						<a href="midpulse.html"><img src="img/midpulse.jpg"></a>
 				</li>
 				<li class="external_mini">
-						<a href=""><img src="http://i.imgur.com/nWuRD8a.jpg"></a>
+						<a href=""><img src="img/portfolio.jpg"></a>
 				</li>
 			</ul>
 			<h2 class="projectTitle">Midpulse</h2>
