--- a/about.html
+++ b/about.html
@@ -25,7 +25,6 @@
 		</div>
     <ul class="nav">
       <li><a href="index.html">Portfolio</a></li>
-      <li><a href="http://blog.donhansen.me">Blog</a></li>
       <li><a href="about.html" class="selected">About</a></li>
       <li><a href="contact.php">Contact</a></li>
     </ul>
@@ -35,12 +34,11 @@
 		
 		<div class="profileInfo clearfix">
 			<img class="profilePicture" src="img/profile.jpg">
-			<p class="">I am an aspiring web developer. While I am open to projects for freelance work, I am more interested in joining a team of developers - one in which I can collaborate, learn, and grow with. By putting time and energy into creating mutually beneficial relationships, I have successfully managed teams and led departments to financial success in other fields. I would like to share that experience and apply it to a career in web development - a career in which I thought was just a dream until recently.</p>
+			<p class="">I am a freelance web developer and consultant. I'm interested in joining a team of developers - one in which I can collaborate, learn, and grow with. I've grown comfortable with the LAMP stack. Over the next few months, you will see me building more with Bootstrap, SASS, Angular, and CodeIgniter on Twitch.</p>
 		</div>
 		
 		<div class="twitchInfo clearfix">
-			
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu bibendum lorem, sit amet luctus lorem. Vestibulum quis justo at mi blandit rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent auctor tortor quis ultrices volutpat. Maecenas vitae justo commodo, pretium erat eu, bibendum risus.</p>
+			<p>Oh yeah, I live stream my development process of many projects. While I try and aim for quick, bite-sized projects, the content is driven by my viewers. I build larger-scale projects on live stream as well. I understand that there's a lot of risk in hiring new developers. Why not see what I can do for yourself?</p>
 			<iframe class="embededLiveStream" src="https://player.twitch.tv/?channel=donthedeveloper" frameborder="0" scrolling="no"></iframe><a href="https://www.twitch.tv/donthedeveloper?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;"></a>
 		</div>
 		
