--- a/onehourportfolio.html
+++ b/onehourportfolio.html
@@ -34,7 +34,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > Midpulse</h1>
+			<h1 class="contentTitle">Portfolio > Bootstrap</h1>
 			<ul class="portfolio_display portfolio_display-max">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -61,28 +61,29 @@
 						<a href="onehourportfolio.html"><img src="img/onehourportfolio.jpg"></a>
 				</li>
 			</ul>
-			<h2 class="projectTitle">Midpulse</h2>
+			<h2 class="projectTitle">One Hour Portfolio</h2>
 
 
 
-			<img class="selectedProject" src="img/midpulse.jpg">
+			<img class="selectedProject" src="img/streamerstats.jpg">
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-				I am an entrepreneur at heart, and this 7-year-long business venture is my first attempt at becoming one. While I scraped together a website for my web hosting company, my main accomplishment of this project was learning, from many failures, how to create and maintain important client relationships that helped my business grow.
+				This website was focused on showing my viewers how easy and quick it was build and launch their portfolio website using Bootstrap. My first live stream regarding this taught my viewers how to take an idea, and turn it into a website, starting with the discovery process. We explored a freelance client questionare and an online wireframing tool to help build a content-driven layout as a mockup. Then, we picked a color scheme (viewer's choice) and built this website using Bootstrap.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
 				<li class="listHTML">HTML</li>
 				<li class="listCSS">CSS</li>
+        <li class="listJavaScript">JavaScript</li>
 			</ul>
 
 			<ul class="projectExternalLinks">
 				<li>
-					<a class="liveSiteButton" href="">Live Site</a>
+					<a class="liveSiteButton" target="_blank" href="http://onehourportfolio.donhansen.me">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" href="">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/1-hour-portfolio">GitHub</a>
 				</li>
 			</ul>		
 
