--- a/streamerstats.html
+++ b/streamerstats.html
@@ -34,7 +34,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > Midpulse</h1>
+			<h1 class="contentTitle">Portfolio > Stats</h1>
 			<ul class="portfolio_display portfolio_display-max">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -61,28 +61,31 @@
 						<a href="onehourportfolio.html"><img src="img/onehourportfolio.jpg"></a>
 				</li>
 			</ul>
-			<h2 class="projectTitle">Midpulse</h2>
+			<h2 class="projectTitle">Streamer Stats</h2>
 
 
 
-			<img class="selectedProject" src="img/midpulse.jpg">
+			<img class="selectedProject" src="img/streamerstats.jpg">
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
-				I am an entrepreneur at heart, and this 7-year-long business venture is my first attempt at becoming one. While I scraped together a website for my web hosting company, my main accomplishment of this project was learning, from many failures, how to create and maintain important client relationships that helped my business grow.
+				I decided to diver deeper into using Twitch's API. This web application takes full advantage of both front-end and back-end languages to build up data through API requests; validate, store, and retrieve data in a MySQL database; run data through PHP classes set up to run calculations; and finally display data in an education manner, taking full advantage of Google's charting API.
 			</p>
 			<h2 class="languagesTitle">Languages Used</h2>
 			<ul class="languages">
 				<li class="listHTML">HTML</li>
 				<li class="listCSS">CSS</li>
+        <li class="listJavaScript">JavaScript</li>
+				<li class="listPHP">PHP</li>
+        <li class="listMySQL">MySQL</li>
 			</ul>
 
 			<ul class="projectExternalLinks">
 				<li>
-					<a class="liveSiteButton" href="">Live Site</a>
+					<a class="liveSiteButton" target="_blank" href="http://streamerstats.tv">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" href="">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper">GitHub</a>
 				</li>
 			</ul>		
 
