--- a/calculator.html
+++ b/calculator.html
@@ -28,7 +28,6 @@
 			</div>
 			<ul class="nav">
 				<li><a href="index.html" class="selected">Portfolio</a></li>
-				<li><a href="http://blog.donhansen.me">Blog</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.php">Contact</a></li>
 			</ul>
@@ -36,7 +35,7 @@
 		
 		<div class="content">
 			<h1 class="contentTitle">Portfolio > Calculator</h1>
-			<ul class="portfolio_display">
+			<ul class="portfolio_display portfolio_display-max">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
 				</li>
@@ -47,7 +46,19 @@
 						<a href="midpulse.html"><img src="img/midpulse.jpg"></a>
 				</li>
 				<li class="external_mini">
-						<a href=""><img src="img/portfolio.jpg"></a>
+						<a href="portfolio.html"><img src="img/portfolio.jpg"></a>
+				</li>
+				<li class="external_mini">
+						<a href="streamenergy.html"><img src="img/streamenergy.jpg"></a>
+				</li>
+				<li class="external_mini">
+						<a href="css3dcube.html"><img src="img/css3dcube.png"></a>
+				</li>
+				<li class="external_mini">
+						<a href="streamerstats.html"><img src="img/streamerstats.jpg"></a>
+				</li>
+				<li class="external_mini">
+						<a href="onehourportfolio.html"><img src="img/onehourportfolio.jpg"></a>
 				</li>
 			</ul>
 			<h2 class="projectTitle">Calculator</h2>
