--- a/courses.html
+++ b/courses.html
@@ -61,7 +61,7 @@
 						<a href="onehourportfolio.html"><img src="img/onehourportfolio.jpg"></a>
 				</li>
 			</ul>
-			<h2 class="projectTitle">Courses</h2>
+			<h2 class="projectTitle">Completed Courses</h2>
 
 
 
@@ -85,7 +85,7 @@
 					<a class="liveSiteButton" target="_blank" href="http://courses.donhansen.me">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/courses">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper/completedcourses">GitHub</a>
 				</li>
 			</ul>		
 
