--- a/midpulse.html
+++ b/midpulse.html
@@ -82,7 +82,7 @@
 					<a class="liveSiteButton" href="">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" href="">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper">GitHub</a>
 				</li>
 			</ul>		
 
