--- a/onehourportfolio.html
+++ b/onehourportfolio.html
@@ -34,7 +34,7 @@
 		</header>
 		
 		<div class="content">
-			<h1 class="contentTitle">Portfolio > Bootstrap</h1>
+			<h1 class="contentTitle">Portfolio > Stats</h1>
 			<ul class="portfolio_display portfolio_display-max">
 				<li class="external_mini">
 						<a href="courses.html"><img src="img/courses.jpg"></a>
@@ -61,11 +61,11 @@
 						<a href="onehourportfolio.html"><img src="img/onehourportfolio.jpg"></a>
 				</li>
 			</ul>
-			<h2 class="projectTitle">One Hour Portfolio</h2>
+			<h2 class="projectTitle">Streamer Stats</h2>
 
 
 
-			<img class="selectedProject" src="img/streamerstats.jpg">
+			<img class="selectedProject" src="img/onehourportfolio.jpg">
 
 			<h2 class="aboutProjectTitle">About The Project</h2>
 			<p class="aboutProject clearfix">
@@ -75,7 +75,7 @@
 			<ul class="languages">
 				<li class="listHTML">HTML</li>
 				<li class="listCSS">CSS</li>
-        <li class="listJavaScript">JavaScript</li>
+				<li class="listJavaScript">JavaScript</li>
 			</ul>
 
 			<ul class="projectExternalLinks">
