--- a/portfolio.html
+++ b/portfolio.html
@@ -82,10 +82,10 @@
 
 			<ul class="projectExternalLinks">
 				<li>
-					<a class="liveSiteButton" href="http://donhansen.me">Live Site</a>
+					<a class="liveSiteButton" href="">Live Site</a>
 				</li>
 				<li>
-					<a class="githubButton" href="">GitHub</a>
+					<a class="githubButton" target="_blank" href="https://github.com/donthedeveloper">GitHub</a>
 				</li>
 			</ul>		
 
